# life_care_planner

./: .env.example  .gitignore  Makefile  Procfile  README.md  docker-compose.yml  manage.py  package.json  pegasus-config.yaml  pyproject.toml
api-client/: runtime.ts
api-client/apis/: DashboardApi.ts  PegasusApi.ts
api-client/models/: AggregateEmployeeData.ts  DepartmentEnum.ts  Employee.ts  PaginatedEmployeeList.ts  PatchedEmployee.ts  UserSignupStats.ts
apps/users/migrations/: 0002_customuser_language_customuser_timezone_and_more.py
life_care_planner/: celery.py  settings.py  urls.py  wsgi.py
static/css/: site-tailwind.css
static/js/: app-bundle.js  pegasus-bundle.js  react-object-lifecycle-bundle.js  vue-object-lifecycle-bundle.js
templates/web/components/: app_nav_menu_items.html
