[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".git",
    ".ruff_cache",
    "node_modules",
    "migrations",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
fixable = [
    "ALL",
]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools]
py-modules = []

[project]
name = "life-care-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docutils",
    "Django",
    "django-allauth[socialaccount,mfa]",
    "django-htmx",
    "django-otp", # this is required for the allauth two-factor migration, but can be removed after that
    "django-template-partials",
    "django-waffle",
    "django-environ",
    "djangorestframework",
    "djangorestframework-api-key",
    "drf-spectacular",
    "django-anymail[mailgun]",
    "django-hijack",
    "celery-progress",
    "celery",
    "celery[redis]",
    "django-celery-beat",
    "markdown",
    "openai",
    "psycopg2-binary",
    "whitenoise[brotli]",
]

[dependency-groups]
dev = [
    "django-debug-toolbar",
    "pre-commit",
    "ruff",
    "pegasus-cli>=0.7",
]
prod = [
    "gunicorn",
]
